fixed the slight horizontal overflow

--- a/style.css
+++ b/style.css
@@ -39,11 +39,12 @@ header nav ul li .active {
     background-position: center;
     background-repeat: no-repeat;
     height: 100vh;
-    width: 100vw;
+    width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    overflow-x: hidden;
 }
 
 .hero-food-and-lodging {
@@ -52,7 +53,7 @@ header nav ul li .active {
     background-position: center;
     background-repeat: no-repeat;
     height: 50vh;
-    width: 100vw;
+    width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -66,7 +67,7 @@ header nav ul li .active {
     background-position: center;
     background-repeat: no-repeat;
     height: 50vh;
-    width: 100vw;
+    width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -80,7 +81,7 @@ header nav ul li .active {
     background-position: center;
     background-repeat: no-repeat;
     height: 50vh;
-    width: 100vw;
+    width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -94,7 +95,7 @@ header nav ul li .active {
     background-position: center;
     background-repeat: no-repeat;
     height: 50vh;
-    width: 100vw;
+    width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
